# dontfailupc

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json
backend/: test_group_making.py
backend/__init__/: database.py  start.py
backend/yake/: ai_yake.py  curlPOST  database.py  start.py  test.py
chat/: .env  .gitignore  Cargo.toml
chat/src/: main.rs  ws.rs
scoring-api/: Dockerfile  flask_app.py  test-api.sh
sveltekit-app/: Dockerfile  README.md  deploy-auth0.js  package-lock.json  package.json
sveltekit-app/src/: app.html  service-worker.js
sveltekit-app/src/lib/: config.ts  course.ts  str.ts  types.ts  url.ts  user.ts  util.ts
sveltekit-app/src/lib/components/: Button.svelte
sveltekit-app/src/lib/server/: auth.ts  db.ts  gpt.ts  jwt.ts  saveNote.ts
sveltekit-app/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Button.svelte  Footer.svelte  app.css
sveltekit-app/src/routes/admin/: +page.server.ts  +page.svelte  Editor.svelte
sveltekit-app/src/routes/messages/: +page.svelte
sveltekit-app/src/routes/messages/[chat]/: +page.svelte  ChatMessage.svelte
sveltekit-app/src/routes/study/: +page.server.ts  +page.svelte
sveltekit-app/src/routes/study/[slug]/: +page.server.ts  +page.svelte
sveltekit-app/src/routes/study/[slug]/[lecture]/: +page.server.ts  +page.svelte  Badge.svelte
sveltekit-app/src/routes/study/[slug]/chat/: +page.server.ts  +page.svelte  ChatMessage.svelte  message.ts
sveltekit-app/static/: manifest.json
websocket-server/: Dockerfile
websocket-server/src/: main.rs  ws.rs
(+4 files in other folders)
