[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  {version = "0.6.18", features = ["headers","ws"] }
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json =  { version = "1.0", default-features = false, features = ["alloc"] }
