[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  {version = "0.6.18", features = ["headers","ws"] }
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
axum-extra = { version = "0.7.2", features = ["cookie"] }
jsonwebtoken = "8.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json =  { version = "1.0", default-features = false, features = ["alloc"] }
dotenv="0.15"
mongodb = "2.5.0"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
